--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+
+body {
+    margin: 0;
 }
