--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-family: 'Titillium Web', sans-serif;
 }
 
 body {
