--- a/src/components/News/News.module.css
+++ b/src/components/News/News.module.css
@@ -116,3 +116,53 @@
     text-transform: uppercase;
     font-weight: bolder;
 }
+
+.MoreNews {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-content: start;
+
+    width: 100%;
+
+    margin: 2em 0;
+
+    border: red 1px dashed;
+}
+
+.MoreNews span {
+    width: 100%;
+    height: 10px;
+    background: #be117e;
+}
+
+.MoreNews a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: white;
+    justify-self: end;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: small;
+
+    padding: 0.5em 4em;
+
+    background: linear-gradient(90deg, #09f4f9 0%, #be117e 100%);
+    clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.MoreNews a:hover {
+    cursor: pointer;
+}
+
+.MoreNews a i {
+    margin-left: 0.5em;
+    margin-bottom: 0.2em;
+
+    font-weight: lighter;
+    font-size: large;
+}
