--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -9,6 +9,8 @@
 
     font-weight: bold;
     color: white;
+
+    background-image: linear-gradient(to left, #000 70%, #09f4f9 30%);
 }
 
 .Navigation ul {
@@ -26,5 +28,24 @@
 
     margin-left: 18em;
     margin-right: 5em;
+
+    padding: 1.7em 1em;
+
+    background: linear-gradient(90deg, #09f4f9 0%, #be117e 100%);
+
+}
+
+.Links {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+
+    width: 100%;
+    background-color: black;
+
+    font-weight: bold;
+    color: white;
+
 }
 
