--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -165,5 +165,40 @@
 
 .SecondaryPartners img {
     height: 40px;
-    margin: 0 2em;
+    margin: 1em 2em;
+}
+
+.FooterBottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+
+    width: 100%;
+    margin: 1em 0;
+}
+
+.FooterBottomLeft {
+    justify-self: start;
+    align-self: center;
+
+    width: 100%;
+}
+
+.FooterBottomLeft img {
+    width: 300px;
+}
+
+.FooterBottomRight {
+    justify-self: end;
+    align-self: center;
+
+    text-align: end;
+
+    width: 100%;
+}
+
+.FooterBottomRight p {
+    text-transform: capitalize;
+    font-size: 0.8rem;
+    font-weight: lighter;
 }
