--- a/src/components/Platform Nav/PlatformNav.module.css
+++ b/src/components/Platform Nav/PlatformNav.module.css
@@ -4,7 +4,7 @@
     justify-content: left;
     align-items: center;
 
-    margin-left: 20em;
+    padding-left: 20em;
 
     background-color: white;
     font-weight: bold;
