--- a/src/components/Platform Nav/PlatformNav.module.css
+++ b/src/components/Platform Nav/PlatformNav.module.css
@@ -4,6 +4,7 @@
     justify-content: left;
     align-items: center;
 
+    width: min(100%, 100% - 20em);
     padding-left: 20em;
 
     background-color: white;
