--- a/src/components/News/News.module.css
+++ b/src/components/News/News.module.css
@@ -48,6 +48,24 @@
 
 }
 
+.NewsMainItem h1::after {
+    content: '';
+    width: 80px;
+    height: 45px;
+    background: #fff;
+    transform: rotate(-140deg);
+    position: absolute;
+    left: 984px;
+    bottom: 8px;
+    border: 2px solid #009EE4;
+    border-top: 0;
+    border-left: 0;
+    border-bottom: 0;
+
+    transition: border linear .25s;
+    border-right: 2px solid #be117e;
+}
+
 .NewsMainItem h3 {
     display: flex;
     align-self: start;
