--- a/src/components/RoundDetails/RoundDetails.module.css
+++ b/src/components/RoundDetails/RoundDetails.module.css
@@ -139,6 +139,8 @@
     padding: 0 1em;
     font-weight: bolder;
 
+    text-align: end;
+
     background-color: #be117e;
     clip-path: polygon(9% 0%, 100% 0%, 100% 99%, 0% 100%);
 }
