--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -20,16 +20,20 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
-    height: 100%;
     font-size: 10px;
 
     margin-left: 28em;
+
+    border-bottom: 2px solid #09f4f9;
+    border-image: linear-gradient(to right, #09f4f9 0%, #be117e 100%) 1;
 }
 
 .Dates h3 {
-    background-color: cyan;
     margin-right: 1em;
+
+    text-transform: uppercase;
+
+    background-color: cyan;
     padding: 0.3em 2em;
     clip-path: polygon(22% 0%, 100% 0%, 100% 99%, 0% 100%);
 }
@@ -42,14 +46,34 @@
     color: white;
     font-size: small;
     margin-left: 45em;
+
+    text-transform: uppercase;
+}
+
+.DatesDesc {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    text-transform: uppercase;
+
+}
+
+.DatesDesc h2 {
+    color: white;
+}
+
+.DatesDesc h4 {
+    color: grey;
+    font-size: 1rem;
+
+    margin: 0 0 0 0.2em;
 }
 
 .Location {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
-    height: 100%;
     font-size: 10px;
 
     margin-left: 28em;
@@ -64,6 +88,7 @@
 .Location h1 {
     font-size: x-large;
     color: white;
+    text-transform: uppercase;
 }
 
 .Countdown {
