--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -8,12 +8,15 @@
     box-sizing: border-box;
     overflow: hidden;
 
+    font-family: 'Titillium Web', sans-serif;
     background-color: #15151E;
 }
 
 .Round {
     display: flex;
     flex-direction: column;
+
+    width: 70%;
 }
 
 .Dates {
@@ -32,6 +35,7 @@
     margin-right: 1em;
 
     text-transform: uppercase;
+    min-width: 55px;
 
     background-color: cyan;
     padding: 0.3em 2em;
@@ -40,12 +44,13 @@
 
 .Dates h2 {
     color: white;
+    min-width: 90px;
 }
 
 .Dates h1 {
+    margin-left: auto;
     color: white;
     font-size: small;
-    margin-left: 45em;
 
     text-transform: uppercase;
 }
